@@ -1,3 +1,6 @@
+- ADD: The "Add before commit" option allows now
+       to add whole unversioned folders to be
+       added before a commit. (Stefan)
 - ADD: The commit dialog has a context menu from
        where its possible to revert changes
        in listed files. (Stefan)
